fixed navbar z-index

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ header {
   background-color: var(--secondary-color);
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 
 .list-item {
